This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

13/05/2006
LordHavoc
- Added -fPIC for Linux builds to support x86_64.
- Removed static-linked libstdc++ hack for non-final builds.
- Removed gcc explicit linking hack for non-final builds.
- Added workaround for gcc static-member-pointer-as-template-argument bug.

30/04/2006
SPoG
- Fixed memory leak in signals library.
- Ported bobtoolz to use new module APIs.

01/04/2006
SPoG
- Added key-observer interface to entity module API.
- Rewrote callback library to add support for return-values.
- Added minimal API to support bobtoolz plugin.
- Refactored brush for-each functions to take Functor instead of Visitor.
- Added signals library.

31/03/2006
SPoG
- Changed doom3 light creation to use size of selected brushes.

20/03/2006
SPoG
- Fixed crash when resetting preferences after startup failure.
- Fixed crash on next-leak-spot with build-monitoring enabled.
- Fixed doom3/quake4 blended-decal rendering when toggling lighting mode.
- Fixed fit-texture with rotated texture transforms.

20/03/2006
SPoG
- Changed Copy/Paste to work on face textures if any faces are selected.
- Fixed GTK_WIDGET_REALIZED assert when selecting entities (linux).

28/02/2006
namespace, SPoG
- Added drag-resizing for doom3/quake4 light_radius boxes.

25/02/2006
SPoG
- Fixed objects sometimes dissappearing when at high zoom level in Ortho views.

24/02/2006
SPoG
- Added GPL text to win32 installer.
- Fixed gtk wimp theme not working after using gtkthemeselector.

21/02/2006
namespace
- Added command to toggle lighting/textured modes, shortcut F3.

20/02/2006
SPoG
- Fixed crash when disabling lighting for a second time.

19/02/2006
SPoG
- Fixed crash when loading invalid ASE models.

11/02/2006
SPoG
- Added install.py script.
- Updated COMPILING instructions.
- Fixed transparency rendering on quake3 shaders.
- Fixed hint/caulk filtering for Jedi Academy shaders.

04/02/2006